# Back-Python

./: .env.example  .gitignore  ARQUITECTURA_HEXAGONAL.md  COMANDOS_RAPIDOS.txt  DESARROLLADOR_1_QUE_HACER.md  DIVISION_TRABAJO.md  ENDPOINTS.md  README.md  README_ESTRUCTURA.md  RESUMEN_CAMBIOS.md  SETUP_FASE2.md  STRUCTURE.txt  VALIDACION_FINAL.md  alembic.ini  codigo.txt  diagrama.dbml  docker-compose.yml  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_activo_to_empleado.py  002_historial_estado_empleado.py  003_create_historial_estado_empleado.py  003_rol_empleado.py  004_add_fk_to_empleado.py  005_rol_empleado_m2m.py
infrastructure/adapters/entry/: main.py
infrastructure/adapters/entry/routes/: catalogo_routes.py  empleado_routes.py  estado_routes.py  rol_destinatario_routes.py  rol_responsable_routes.py  tipo_catalogo_routes.py
infrastructure/adapters/output/models/: catalogo_model.py  emp_cargo_model.py  empleado_model.py  estado_model.py  rol_destinatario_model.py  rol_responsable_model.py  tipo_catalogo_model.py
infrastructure/adapters/output/repositories/: catalogo_repository.py  emp_cargo_repository.py  empleado_repository.py  estado_repository.py  rol_destinatario_repository.py  (+2 more)
infrastructure/config/: database.py  security.py
src/domain/exceptions/: __init__.py  crud_exceptions.py
src/infrastructure/config/: __init__.py  auth.py  cloudinary_config.py  security.py
tests/unit/application/: test_delete_use_cases.py  test_empleado_use_cases.py  test_rol_empleado_use_cases.py
(+242 files in other folders)
